tests/errors/if_expr_mismatch.milo
// @error: mismatched types

fn main(): i32 {
    let x = if true { 10 } else { "hello" }
    return 0
}
